Fix Gradio 3.39.0 textbox overflow

--- a/style.css
+++ b/style.css
@@ -140,6 +140,10 @@ div.styler{
     background: var(--background-fill-primary);
 }
 
+.block.gradio-textbox{
+    overflow: visible !important;
+}
+
 
 /* general styled components */
 
